field labels align fix

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -704,8 +704,10 @@ input[readonly] {
 	width: 25%;
 	padding-right: 20px;
 	color: var(--TEXT_COLOR);
-	display: inline-block;
+	display: inline-flex;
 	text-align: right;
+	justify-content: flex-end;
+	align-items: center;
 }
 
 .field-wrap-help-container {
@@ -749,6 +751,8 @@ input[readonly] {
 	padding: 3px;
 	margin-top: 2px;
 	margin-bottom: -16px;
+	position: absolute;
+	margin-top: 27px;
 }
 
 .field-wrap-alert-success {
